<resources>
    <string name="font_neuzeitgro_light">fonts/NeuzeitGro-Lig.ttf"</string>
    <string name="font_neuzeitgro_regular">fonts/NeuzeitGro-Reg.ttf"</string>
    <string name="font_neuzeitgro_bold">fonts/NeuzeitGro-Bol.ttf"</string>
    <string name="font_neuzeitgro_black">fonts/NeuzeitGro-Bla.ttf"</string>
    <string name="font_montserrat_light">fonts/Montserrat-Light.ttf"</string>
    <string name="font_montserrat_regular">fonts/Montserrat-Regular.ttf"</string>
    <string name="font_montserrat_medium">fonts/Montserrat-Medium.ttf"</string>
    <string name="font_montserrat_semibold">fonts/Montserrat-SemiBold.ttf"</string>
    <string name="font_montserrat_bold">fonts/Montserrat-Bold.ttf"</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="lorem_ipsum_medium">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="lorem_ipsum_short">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. </string>
    <string name="network_error">Internet connection problems. Please try again later.</string>
    <string name="error_occurred_performing_operation">An error occurred while performing this operation</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="try_again">Try again</string>
    <string name="dashboard">Dashboard</string>
    <string name="programs">Programs</string>
    <string name="wallet">Wallet</string>
    <string name="profile">Profile</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="sign_in">Sign In</string>
    <string name="dont_have_account">Don\'t have an account?</string>
    <string name="already_have_account">Already have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="email_verification_text">We sent a verification link to the email you specified.\n\nPlease follow this link to complete the registration.</string>
    <string name="forgot">Forgot?</string>
    <string name="forgot_password">Forgot password</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_your_account_email">Enter your account email</string>
    <string name="search">Search</string>
    <string name="cannot_find_anything">Cannot find anything with your request</string>
    <string name="filters">Filters</string>
    <string name="level">Level</string>
    <string name="average_profit">Average profit (%)</string>
    <string name="invest">Invest</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="decimal">.</string>
    <plurals name="investors">
        <item quantity="one">investor</item>
        <item quantity="two">investors</item>
        <item quantity="other">investors</item>
    </plurals>
    <string name="trades">Trades</string>
    <string name="zoom_one_day">1D</string>
    <string name="zoom_one_week">1W</string>
    <string name="zoom_one_month">1M</string>
    <string name="zoom_three_months">3M</string>
    <string name="zoom_six_months">6M</string>
    <string name="zoom_all">ALL</string>
    <string name="zoom_one_year">1Y</string>
    <string name="share">Share</string>
    <string name="success_trades">Success trades</string>
    <string name="profit_factor">Profit factor</string>
    <string name="sharpe_ratio">Sharpe ratio</string>
    <string name="max_drawdown">Max Drawdown</string>
    <string name="calmar_ratio">Calmar ratio</string>
    <string name="sortino_ratio">Sortino ratio</string>
    <string name="delete">Delete</string>
    <string name="subscribers">Subscribers</string>
    <string name="edit">Edit</string>
    <string name="profit_change">Profit change</string>
    <string name="sharpe_ratio_definition">A program performance indicator, which is calculated as the mathematical ratio of the average return to the average deviation of this return. The higher the Sharpe Ratio value, the lower the portfolio risks.</string>
    <string name="sortino_ratio_definition">It is a variation of the Sharpe ratio that only factors in the downside risk. The greater the value of Sortino Ratio, the higher the efficiency of the portfolio and the lower the investment risks of investing in a fund.</string>
    <string name="calmar_ratio_definition">A comparison of the average annual compounded rate of return and the maximum drawdown risk of asset managers and hedge funds. The higher the score, the better the portfolio is formed.</string>
    <string name="max_drawdown_definition">The biggest drawdown of a fund during the selected date range.</string>
    <string name="profit_change_definition">How much in % has the profit changed in the current time period compared to the previous one in the same period.</string>
    <string name="pin">Pin</string>
    <string name="copy_link">Copy link</string>
    <string name="report">Report</string>
    <string name="unpin">Unpin</string>
    <string name="trading_volume">Trading volume</string>
    <string name="investors_definition">The current number of investors in the program.</string>
    <string name="subscribers_definition">The current number of subscribers.</string>
    <string name="trading_volume_definition">The total Trading volume for the selected period, divided by the leverage.</string>
    <string name="profit_factor_definition">An indicator which is defined as the gross profit divided by the gross loss for the selected date range.</string>
    <string name="success_trades_definition">The percentage of successful trades among the number of total trades during the selected date range.</string>
    <string name="trades_definition">The number of trades the manager has performed during the selected date range.</string>
    <string name="sharpe_ratio_program_definition">A measure of the effectiveness of a program, which is calculated as the mathematical ratio of the average yield to the average deviation of this yield. The higher the ratio, the lower the risk of investments, and higher the hypothetical profit.</string>
    <string name="sortino_ratio_program_definition">Is a variation of the Sharpe ratio that only factors in the downside risk. The larger this indicator, the better and more effective the program in terms of combining risk and profitability.</string>
    <string name="max_drawdown_program_definition">The biggest drawdown of a program during the selected date range.</string>
</resources>