<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_dashboard"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/dashboard"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_invest"
        android:icon="@drawable/ic_attach_money_black_24dp"
        android:title="@string/invest"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_wallet"
        android:icon="@drawable/ic_account_balance_wallet_black_24dp"
        android:title="@string/wallet"
        app:showAsAction="ifRoom|withText"/>

    <item
        android:id="@+id/menu_profile"
        android:icon="@drawable/ic_person_black_24dp"
        android:title="@string/profile"
        app:showAsAction="ifRoom|withText"/>

</menu>